fix: ✍ List.of() update to Arrays.asList()