@@ -1,6 +1,6 @@
 package com.egemmerce.hc.repository.dto;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
@@ -13,7 +13,7 @@ public class UserAccount extends User{
     private com.egemmerce.hc.repository.dto.User loginUser;
 
     public UserAccount(com.egemmerce.hc.repository.dto.User loginUser) {
-        super(loginUser.getuEmail(), loginUser.getuPassword(), List.of(new SimpleGrantedAuthority("ROLE_USER")));
+        super(loginUser.getuEmail(), loginUser.getuPassword(), Arrays.asList(new SimpleGrantedAuthority("ROLE_USER")));
         this.loginUser = loginUser;
     } 
     
